RESOLVED FIXED143110
Fix iOS scrollperf crash after a web process crash
https://bugs.webkit.org/show_bug.cgi?id=143110
Summary Fix iOS scrollperf crash after a web process crash
Simon Fraser (smfr)
Reported 2015-03-26 12:01:59 PDT
Fix iOS scrollperf crash after a web process crash
Attachments
Patch (1.39 KB, patch)
2015-03-26 12:03 PDT, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2015-03-26 12:03:04 PDT
Simon Fraser (smfr)
Comment 2 2015-03-29 21:18:55 PDT
Note You need to log in before you can comment on or make changes to this bug.