Fix iOS scrollperf crash after a web process crash https://bugs.webkit.org/show_bug.cgi?id=143110

Reviewed by Dean Jackson.

When we destroy the drawing area after a web process crash, we also need to destroy
the scrollingPerformanceData which has a reference to the drawing area.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetState):

Canonical link: https://commits.webkit.org/161233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182133 268f45cc-cd09-0410-ab3c-d52691b4dbfc